# project-lambda-rust

./: Cargo.toml  LICENSE  README.md  hello_world  hello_world.rs  import_json.py  json_hash_output_escalate.json  json_hash_output_large.json  json_hash_output_long_nonrecurs_rust.json  json_hash_output_long_nonrecurs_vec_rust.json  json_hash_output_long_rust.json  json_hash_output_short_python.json  json_hash_output_short_rust.json  json_hash_output_supershort_nonrecurs_vec_rust.json  json_hash_output_supershort_recurs_rust.json  query-json.MD  querying-json.ipynb  xxxREADME.md
archive_code/: import_json.py
src/: flatteners.rs  main.rs  main_nonrecursive.rs  main_recursive.rs
src/flatteners/: mod.rs  nonrecurs.rs  nonrecurs_vec.rs  recurs.rs
test_data/: lambda_project_testdata_json.sql  lambda_project_testdata_long.json  lambda_project_testdata_long_2019.json  lambda_project_testdata_medium.json  lambda_project_testdata_medium_2019.json  lambda_project_testdata_short.json  lambda_project_testdata_short_2019.json  lambda_project_testdata_short_with_headerblock.json  lambda_project_testdata_supershort.json
