[package]
name = "projectlambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]


[dependencies]
indexmap = "1.9.2"
serde_json = "1.0.93"
serde = { version = "1.0.155", features = ["derive"] }
rayon = "1.7"

[profile.release]
debug = false
opt-level = 3

[profile.dev]
opt-level = 0

